<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f4c3"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/edit_text_email_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/edit_text_password_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email_login"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_login"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/button_login_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password_login"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password_login" />

</androidx.constraintlayout.widget.ConstraintLayout>